# E2E-AudioClassfication

./: .gitignore  README.md  lightning-trainer.ipynb  pyproject.toml  trainer.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  requirements.txt
datasets/: esc_dataset.py
model/: audio_augs.py  batch_augs.py  soundnet.py
model/augmentations/: audio_augs.py  batch_augs.py
model/utils/: helper_funcs.py
notebooks/: lightning-trainer.ipynb
playground/: evaluation.ipynb  hf-tutorial.ipynb  lightning-test.ipynb  lightning-test.py  profiler_augmentations_on_gpu.txt  profiler_with_augmentations.md  profiler_without_augmentations.txt  pytorch-hf-test.ipynb  pytorch-test.ipynb  test-esc_dataset.ipynb
utils/: helper_funcs.py
