[tool.poetry]
name = "e2e-audioclassfication"
version = "0.1.0"
description = ""
authors = ["Raphael Schwinger <raphaelschwinger@gmail.com>"]
readme = "README.md"
packages = [{include = "e2e_audioclassfication"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyyaml = "^6.0"
numpy = "^1.24.3"
torch = "^1.13.1"
tensorboard = "^2.13.0"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
torchaudio = "0.13.1"
debugpy = "^1.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
