[tool.poetry]
name = "e2e-audioclassfication"
version = "0.1.0"
description = "End-to-End Audio Strikes Back: Boosting Augmentations Towards An Efficient Audio Classification Network pytorch lightning implementation https://github.com/DBD-research-group/E2E-AudioClassfication"
authors = ["Raphael Schwinger <raphaelschwinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ffprobe = "^0.5"
# --------- pytorch --------- #
torch = [
    {url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-linux_x86_64.whl", platform = "linux", python = ">=3.10"}
]
torchvision = [
    {url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp310-cp310-linux_x86_64.whl", platform = "linux", python = ">=3.10"}
]
torchaudio = [
    {url = "https://download.pytorch.org/whl/cu117/torchaudio-2.0.2%2Bcu117-cp310-cp310-linux_x86_64.whl", platform = "linux", python = ">=3.10"}
]
lightning= "^2.0"
torchmetrics= "^0.11"
datasets = "^2.14.6"
librosa = "^0.10.1"
soundfile = "^0.12.1"
matplotlib = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
